--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="wrap">
         <header>
             <img src="/images/header.jpg" alt="Advertiser Connect">
-            <h1>Connect with Advertisers in the May Issue of Sign &amp; Digital Graphics</h1>
+            <h1>Connect with Advertisers in a Issue of Sign &amp; Digital Graphics</h1>
         </header>
         <div id="loader">loading</div>
         <div id="content">
