--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div id="wrap">
         <header>
             <img src="/images/header.jpg" alt="Advertiser Connect">
-            <h1>Connect with Advertisers in the May Issue of Sign &amp; Digital Graphics</h1>
+            <h1>Connect with Advertisers in this Issue of <span class="pub"></span></h1>
         </header>
         <div id="loader">loading</div>
         <div id="content">
             <div id="DrpDwn">
-                <span class="selected-month"></span> <select id="DropDown_Year"><option>Select Another Issue</option></select>
+                <span class="selectedDate"></span> <select id="DropDown_Year"><option>Select Another Issue</option></select>
             </div>
 
             <table id="details" border="0" cellpadding="2" cellspacing="2">
