--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>NBM: Advertiser Connect</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,17 +18,24 @@
         <div id="loader">loading</div>
         <div id="content">
             <div id="DrpDwn">
-                <span class="selectedDate"></span> <select id="DropDown_Year"><option>Select Another Issue</option></select>
+                <span class="selectedDate"></span> <select id="DropDown_Year"><option value="">Select Another Issue</option></select>
             </div>
 
-            <table id="details" border="0" cellpadding="2" cellspacing="2">
+            <!-- <table id="details" border="0" cellpadding="2" cellspacing="2">
                 <thead>
                     <tr>
                         <th>Company Name</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
-            </table>
+            </table> -->
+            <div id="details">
+                <h2>Company Name</h2>
+                <ul></ul>
+            </div>
+
+
+
         </div>
     </div>
 
