--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>NBM: Advertiser Connect</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,26 +20,16 @@
                 <span class="selectedDate"></span> <select id="DropDown_Year"><option value="">Select Another Issue</option></select>
             </div>
 
-            <!-- <table id="details" border="0" cellpadding="2" cellspacing="2">
-                <thead>
-                    <tr>
-                        <th>Company Name</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table> -->
             <div id="details">
                 <h2>Company Name</h2>
                 <ul></ul>
             </div>
 
-
-
         </div>
     </div>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.1/jquery.min.js'></script>
-    <script src="js/index.js"></script>
+    <script src='/js/jquery.min.js'></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
