--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@
 
 <body>
     <div id="wrap">
-        <header>
-            <img src="/images/header.jpg" alt="Advertiser Connect">
-            <h1>Connect with Advertisers in this Issue of <span class="pub"></span></h1>
-        </header>
-        <div id="loader">loading</div>
-        <div id="content">
-            <div id="DrpDwn">
-                <span class="selectedDate"></span> <select id="DropDown_Year"><option value="">Select Another Issue</option></select>
-            </div>
 
-            <div id="details">
-                <h2>Company Name</h2>
-                <ul></ul>
-            </div>
+        <h1>NBM Connect with Advertisers:</h1>
+
+        <div id="content">
+            <ul>
+                <li><a href="/printwear.html">Printwear</a></li>
+                <li><a href="/ae.html">Awards &amp; Engraving</a></li>
+                <li><a href="/rvp.html">RV Pro</a></li>
+                <li><a href="/sdg.html">Sign &amp; Digital Graphics</a></li>
+                <li><a href="/shop.html">The Shop</a></li>
+            </ul>
 
         </div>
     </div>
 
-    <script src='/js/jquery.min.js'></script>
-    <script src="/js/index.js"></script>
 </body>
 
 </html>
